syntax = "proto3";

service AuthService {
	rpc Authenticate (LoginRequest) returns (LoginReply) {}
	rpc Register (RegisterRequest) returns (RegisterReply) {}
}

message Error {
	string code = 1;
	string data = 2;
}

message LoginRequest {
	string username = 1;
	string password = 2;
}

message LoginReply {
	bool success = 1;
	Error error = 2;
	string sessionKey = 3;

}

message RegisterRequest {
	string username = 1;
	string password = 2;
}

message RegisterReply {
	bool success = 1;
	Error error = 2;
}


